# Inter-Process-Communication-Benchmarking

./: .gitignore  CMakeLists.txt  README.md
include/: MatrixOperation.h  debug.h
include/IPC/: IPCMethod.h  IPCPipe.h  IPCSharedMemory.h  IPCSocket.h
src/: MatrixOperation.cpp  main.cpp
src/IPC/: IPCPipe.cpp  IPCSharedMemory.cpp  IPCSocket.cpp
